# project-igi-converter

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  imgui.ini  mem0.md
assets/: gconv.rc  igi1conv.rc  resources.qrc
docs/: COMMANDS.md  ISSUES.md  OLM_LIGHTMAP_CLI_GUIDE.md  SUPPORTED_FORMATS.md  game_file_formats.md  game_file_formats_igi1_igi2.md  game_model_naming.md  game_parsers.md  mef_model_types.md
docs/game_file_formats/: Lightmap_docs.md
docs/superpowers/plans/: 2026-06-24-apply-lightmap.md
docs/superpowers/specs/: 2026-06-24-apply-lightmap-design.md
gconv/: cmd_res.cpp  cmd_tex.cpp  main.cpp  support.cpp
igi1conv/: cmd_dat.cpp  cmd_fnt.cpp  cmd_graph.cpp  cmd_iff.cpp  cmd_iff.h  cmd_lightmap.cpp  cmd_lightmap.h  cmd_mef.cpp  cmd_mtp.cpp  cmd_olm.cpp  cmd_olm.h  cmd_qsc.cpp  cmd_qvm.cpp  cmd_res.cpp  cmd_terrain.cpp  cmd_test.cpp  cmd_test.h  cmd_tex.cpp  cmd_wav.cpp  cmd_wav.h  gif.h  gui_main.cpp  main.cpp  support.cpp  wav_adpcm.h
scratch/: release.ps1
source/: utils.h
source/parsers/: dat_parser.cpp  iff_bef.cpp  iff_bef.h  iff_decompiler.cpp  iff_decompiler.h  iff_gif_exporter.cpp  iff_gif_exporter.h  iff_parser.cpp  iff_parser.h  iff_to_bef.cpp  iff_to_bef.h  iff_writer.cpp  iff_writer.h  lightmap_resolver.cpp  lightmap_resolver.h  mef_compiler.cpp  mef_compiler.h  mef_exporter.cpp  mef_exporter.h  mef_native.cpp  mef_native.h  mef_parser.cpp  mef_parser.h  mtp_tool.cpp  qsc_object_parser.cpp  qsc_object_parser.h  qvm_compiler.cpp  qvm_decompiler.cpp  res_compiler.cpp  res_compiler.h  tex_parser.cpp  tex_parser.h
tests/: gconv_test_util.h  igi1conv_test_util.h  test_gconv_commands.cpp  test_gconv_roundtrip.cpp  test_igi1conv_commands.cpp  test_igi1conv_dynamic.cpp  test_igi1conv_roundtrip.cpp  test_igi1conv_wav.cpp  test_lightmap_binding_parser.cpp  test_lightmap_resolver.cpp  test_mef_lightmap_uv.cpp  test_qsc_object_parser.cpp  test_qsc_object_parser_realfiles.cpp
tools/dconv/format/: iff.py  mef.py  wav.py
tools/dconv/plugins/iff/: IGI1_convert.py  IGI1_create.py  IGI1_decompile.py  IGI1_iff.py  IGI1_iffc.py  IGI1_iffc01.py  IGI1_iffc_DW.py  IGI1_iffw.py  IGI1_iffw_DW.py  IGI1_struct_iff.py  __init__.py  comp_02.py  compare.py  convert.py  decompile.py  iff.py  iffc.py  iffc_DW.py  reader_IFF.py  reader_IFFS.py  reader_anims_data.py  reader_anims_frm.py  reader_frm.py  struct_iff.py
tools/dconv/plugins/tex/: convert.py
